2008-12-04  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* configure.ac:
	* src/Makefile.am:
	  Only build & link dllwrapper on x86.

	* src/BuzzMachineLoader/dsplib.h:
	  __fastcall is x86 only.

	* src/bmltest_info.c:
	  whitespace.

2008-12-02  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/Makefile.am:
	* src/Makefile.am:
	  Also remove comments now that we changed it.

2008-12-02  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* dllwrapper/wine/Makefile.am:
	* dllwrapper/wine/module.c:
	* src/Makefile.am:
	  Have windows dlls in $prefix/lib/win32 instead of $prefix/lib.

2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* src/BuzzMachineLoader/Makefile.am:
	* src/Makefile.am:
	  Check for libm and libdl. The libdl part should fix #2367633.

2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* src/Makefile.am:
	  Only install dll on x86.

2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* configure.ac:
	* src/BuzzMachineLoader/Makefile.am:
	* src/Makefile.am:
	* +   dllwrapper (added):
	* dllwrapper1 (deleted):
	* dllwrapper1/libwin32.h (deleted):
	* dllwrapper1/wine (deleted):
	* dllwrapper1/wine/winuser.h (deleted):
	* dllwrapper1/wine/poppack.h (deleted):
	* dllwrapper1/wine/afl.c (deleted):
	* dllwrapper1/wine/win32.c (deleted):
	* dllwrapper1/wine/ntdef.h (deleted):
	* dllwrapper1/wine/win32.h (deleted):
	* dllwrapper1/wine/registry.c (deleted):
	* dllwrapper1/wine/loader.h (deleted):
	* dllwrapper1/wine/debugtools.h (deleted):
	* dllwrapper1/wine/winerror.h (deleted):
	* dllwrapper1/wine/registry.h (deleted):
	* dllwrapper1/wine/ldt_keeper.c (deleted):
	* dllwrapper1/wine/stubs.s (deleted):
	* dllwrapper1/wine/msacmdrv.h (deleted):
	* dllwrapper1/wine/windef.h (deleted):
	* dllwrapper1/wine/heap.h (deleted):
	* dllwrapper1/wine/ldt_keeper.h (deleted):
	* dllwrapper1/wine/resource.c (deleted):
	* dllwrapper1/wine/vfl.c (deleted):
	* dllwrapper1/wine/ldt.h (deleted):